<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:id="@+id/nav_home"
        android:title="@string/menu_home"
        android:icon="@drawable/baseline_home_24"/>

    <item android:id="@+id/nav_word_day"
        android:title="@string/menu_word_day"
        android:icon="@drawable/baseline_emoji_people_24"/>

    <item android:id="@+id/nav_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/baseline_settings_24"/>
    <item android:title="@string/social">

        <menu>
            <item android:id="@+id/nav_about"
                android:title="@string/menu_about"/>
        </menu>
    </item>
</menu>