<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/nav_home"
    android:id="@+id/mobile_navigation">

    <fragment android:id="@+id/nav_home"
        android:label="@string/menu_home"
        android:name="co.tiagoaguiar.tutorial.jokerappdev.view.HomeFragment"
        tools:layout="@layout/fragment_home"
      />

    <fragment android:id="@+id/nav_word_day"
        android:label="@string/menu_word_day"
        android:name="co.tiagoaguiar.tutorial.jokerappdev.view.WordDayFragment"
        tools:layout="@layout/fragment_word_day"/>

    <fragment android:id="@+id/nav_settings"
        android:label="@string/menu_settings"
        android:name="co.tiagoaguiar.tutorial.jokerappdev.view.SettingsFragment"
        tools:layout="@layout/fragment_settings"/>

    <fragment android:id="@+id/nav_about"
        android:label="@string/menu_about"
        android:name="co.tiagoaguiar.tutorial.jokerappdev.view.AboutFragment"
        tools:layout="@layout/fragment_about"/>

</navigation>